tiny interface tweaks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<style>
 			.hero-unit p { margin-top: 30px; font-size: 150%; }
-			h2 { margin-left: 60px; }
+			.theform { padding-left: 60px; }
 		</style>
 	</head>
 	<body>
@@ -26,7 +26,7 @@
 			
 				<form action="do.php">
 					<input type="text" name="reason" class="input-xxlarge" />
-					<button type="submit" class="btn" style="display:block;">Submit</button>
+					<button type="submit" class="btn btn-inverse" style="display:block;">Submit</button>
 				</form>
 			</div>
 		</div>
